--- a/pron/app/views/layouts/application.html.ejs
+++ b/pron/app/views/layouts/application.html.ejs
@@ -36,9 +36,12 @@
           <%- linkTo('All The Porn', '/', { class: 'brand' }) %>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><%- linkTo('Home', '/') %></li>
-              <li><%- linkTo('Tutorial', 'http://geddyjs.org/tutorial.html') %></li>
-              <!--<li><%- linkTo('Docs', 'http://geddyjs.org/docs.html') %></li>-->
+              <li class="divider-vertical"></li>
+              <li><%- linkTo('Home', '/') %></li>
+              <li class="divider-vertical"></li>
+              <li><%- linkTo('Geddy Tutorial', 'http://geddyjs.org/tutorial.html') %></li>
+              <li><%- linkTo('Geddy Docs', 'http://geddyjs.org/docs.html') %></li>
+              <li class="divider-vertical"></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
