--- a/pron/app/views/layouts/application.html.ejs
+++ b/pron/app/views/layouts/application.html.ejs
@@ -48,6 +48,14 @@
       </div>
     </div>
     <div class="container">
+      <div class="control-group">
+        <div class="input-prepend">
+          <span class="add-on">
+              <i class="icon-search"></i>
+          </span>
+          <input type="search" class="span3 " placeholder="Search" name="search" id="search" style="float: left;"/>
+        </div>
+      </div>
       <%- yield(); %>
     </div>
   </body>
