--- a/pron/app/views/movies/index.html.ejs
+++ b/pron/app/views/movies/index.html.ejs
@@ -16,7 +16,7 @@
 
         <li class="span3">
           <h4><%= truncate(movies[i].title, { length: 32 }); %></h4>
-          <a href="<%= movies[i].uri; %>" class="thumbnail">
+          <a href="<%= movies[i].uri; %>" class="thumbnail" target="_blank">
             <%#= movies[i].imgs[0]; %>
             <img src="/img/sunflower.jpg" style="width:260px; height: 180px;" alt="<%= movies[i].title; %>">
           </a>
