Fixed favicon Using real thumbnails

--- a/pron/app/views/layouts/application.html.ejs
+++ b/pron/app/views/layouts/application.html.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>All The Porn</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="All The Porn - New style of porn">
+    <meta name="author" content="Tomas Korcak - korczis@gmail.com">
 
     <meta name="viewport" content="width=device-width" />
 
@@ -21,7 +21,7 @@
     <%- styleLink('/css/bootstrap.responsive.min.css', {rel:'stylesheet'}) %>
 
     <!-- The fav and touch icons -->
-    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="shortcut icon" href="/ico/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -50,6 +50,7 @@
         </div>
       </div>
     </div>
+    
     <div class="container">
       <div class="control-group">
         <div class="input-prepend">
