--- a/pron/app/views/layouts/application.html.ejs
+++ b/pron/app/views/layouts/application.html.ejs
@@ -25,6 +25,9 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+
+    <%= partial("_google_analytics", {}) %>
+    
   </head>
   <body>
     <div class="navbar navbar-fixed-top">
