--- a/pron/app/views/movies/index.html.ejs
+++ b/pron/app/views/movies/index.html.ejs
@@ -18,7 +18,7 @@
           <h4><%= truncate(movies[i].title, { length: 32 }); %></h4>
           <a href="<%= movies[i].uri; %>" class="thumbnail" target="_blank">
             <% var link = movies[i].imgs[0]; %>
-            <%# var link = "/img/sunflower.jpg"; %>;
+            <%# var link = "/img/sunflower.jpg"; %>
             <img src=<%= link %> style="width:260px; height: 160px;" alt="<%= movies[i].title; %>">
           </a>
         </li>
